Initial program structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /CardGame/obj/Debug
+/.vs/CardGame/v15/Server/sqlite3
